feat: just move the lookups